Mon Dec  1 16:52:25 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
          Implement (by delegation) groups_at_location

        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.cpp:
          Implement groups_at_location

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
          New method: has_member_at to support groups_at_location.
          New method: add_member_to_iogr refactor support for updating IOGR
          Complete implementations of add_member, create_member, 
          and *populate methods.
          

Mon Dec  1 15:24:27 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.cpp:
          Remove create_member method.  It doesn't belong here.

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
          Remove invalid assert.

Mon Dec  1 13:24:15 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
          Honor initial and minimum member counts.

Mon Dec  1 09:16:28 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
          Move implementation details to PG_Object_Group

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
          Declare remaining functions to support ReplicationManager.
          Stubbed out for now.

        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.cpp: